--- a/Samples/app/src/main/res/values/strings.xml
+++ b/Samples/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">DataSharing</string>
+    <string name="app_name">Data Sharing</string>
+    <string name="greeting">How you doing?</string>
+    <string name="editTextHint">Enter text here</string>
+    <string name="sendButtonText">Send Data</string>
 </resources>
