--- a/Chatter/app/src/main/res/values/strings.xml
+++ b/Chatter/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="button_view_text">View Chatter</string>
     <string name="view_title_text">Last 30 Chats</string>
     <string name="list_view_empty_text">No chatter available</string>
+    <string name="preference_user_name_title">Login Name</string>
+    <string name="preference_user_name_summary">Set or change your alias</string>
+    <string name="preference_user_password_title">Password</string>
+    <string name="preference_user_password_summary">Set or change your password</string>
+    <string name="preference_main_bg_color_title">Main Background Color</string>
+    <string name="preference_main_bg_color_summary">Modify current background color (#RRGGBB)</string>
 </resources>
