--- a/Chatter/app/src/main/res/values/strings.xml
+++ b/Chatter/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="preference_user_password_title">Password</string>
     <string name="preference_user_password_summary">Set or change your password</string>
     <string name="preference_main_bg_color_title">Main Background Color</string>
-    <string name="preference_main_bg_color_summary">Modify current background color (#RRGGBB)</string>
+    <string name="preference_main_bg_color_summary">Modify current background color</string>
 </resources>
