--- a/Chatter/app/src/main/res/values/strings.xml
+++ b/Chatter/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="preference_user_password_summary">Set or change your password</string>
     <string name="preference_main_bg_color_title">Main Background Color</string>
     <string name="preference_main_bg_color_summary">Modify current background color</string>
+    <string name="preference_key_user_name">user_name</string>
+    <string name="preference_key_password">password</string>
+    <string name="preference_key_main_bg_color">main_bg_color</string>
 </resources>
