--- a/Chatter/app/src/main/res/values/strings.xml
+++ b/Chatter/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="preference_key_user_name">user_name</string>
     <string name="preference_key_password">password</string>
     <string name="preference_key_main_bg_color">main_bg_color</string>
+    <string name="color_change_title_text">Choose Background Color</string>
 </resources>
